welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:22: error: value update is not a member of java.awt.Color
  	if (getCouleurSol()=CaseCouleur) {
            ^SlugSnail:22: error: not found: value CaseCouleur
  	if (getCouleurSol()=CaseCouleur) {
                            ^